@@ -31,16 +31,15 @@ namespace QuantLib {
                 QL_FAIL("exchange rate not applicable");
           case Derived:
             if (amount.currency() == rateChain_.first->source() ||
-                amount.currency() == rateChain_.first->target()) {
+                amount.currency() == rateChain_.first->target())
                 return rateChain_.second->exchange(
                                          rateChain_.first->exchange(amount));
-            } else if (amount.currency() == rateChain_.second->source() ||
-                       amount.currency() == rateChain_.second->target()) {
+            else if (amount.currency() == rateChain_.second->source() ||
+                       amount.currency() == rateChain_.second->target())
                 return rateChain_.first->exchange(
                                          rateChain_.second->exchange(amount));
-            } else {
+            else
                 QL_FAIL("exchange rate not applicable");
-            }
           default:
             QL_FAIL("unknown exchange-rate type");
         }
